--- a/contact-success.html
+++ b/contact-success.html
@@ -9,49 +9,39 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/success.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <a href="index.html"
-        ><img
-          src="images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <label for="hamburger-menu"
-        ><i class="fas fa-bars" id="hamburger-icon"></i
-      ></label>
-      <input type="checkbox" id="hamburger-menu" />
-      <nav>
-        <ul>
-          <li><a href="shop-men.html">Men</a></li>
-          <li><a href="shop-women.html">Women</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-        <div class="icon-wrapper">
-          <a href="login.html"><i class="far fa-user icon"></i></a>
-          <a href="shopping-bag.html"
-            ><i class="fas fa-shopping-cart icon"></i
-          ></a>
+    <div class="wrapper">
+      <header>
+        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+        <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <ul>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+          </ul>
+          <div class="icon-wrapper">
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="success__main contact__success">
+          <h1>Confirmation of received message!</h1>
+          <i class="far fa-check-circle fa-7x icon-success"></i>
+          <p>
+            Your message ID is 591222. You will receive an email to PaulAskeladden@hotmail.com when we have looked at
+            your message
+          </p>
+          <a href="index.html" class="cta-dark-green">Back to home page</a>
         </div>
-      </nav>
-    </header>
-    <main>
-      <div class="success__main contact__success">
-        <h1>Confirmation of received message!</h1>
-        <i class="far fa-check-circle fa-7x icon-success"></i>
-        <p>
-          Your message ID is 591222. You will receive an email to
-          PaulAskeladden@hotmail.com when we have looked at your message
-        </p>
-        <a href="index.html" class="cta-dark-green">Back to home page</a>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer>
       <div class="footer__content">
         <a href="contact-us.html">Help</a>
