--- a/about-us.html
+++ b/about-us.html
@@ -9,60 +9,46 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/about.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <a href="index.html"
-        ><img
-          src="images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <label for="hamburger-menu"
-        ><i class="fas fa-bars" id="hamburger-icon"></i
-      ></label>
-      <input type="checkbox" id="hamburger-menu" />
-      <nav>
-        <ul>
-          <li><a href="shop-men.html">Men</a></li>
-          <li><a href="shop-women.html">Women</a></li>
-          <li><a href="about-us.html" class="active">About Us</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-        
-        <div class="icon-wrapper">
-          <a href="login.html"><i class="far fa-user icon"></i></a>
-          <a href="shopping-bag.html"
-            ><i class="fas fa-shopping-cart icon"></i
-          ></a>
+    <div class="wrapper">
+      <header>
+        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+        <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <ul>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
+            <li><a href="about-us.html" class="active">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+          </ul>
+          <div class="icon-wrapper">
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="about__background"></div>
+        <div class="about__section">
+          <h1>About us</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis leo scelerisque sodales.
+            Aliquam dapibus, tortor eu auctor consectetur, eros lectus interdum justo, vitae sollicitudin ipsum augue eu
+            mi. Proin maximus, nulla non fringilla vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa
+            sed enim. Integer risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
+          </p>
+          <p>
+            Nulla convallis, ipsum vel vestibulum dapibus, nunc magna auctor sapien, eu commodo risus nibh vitae magna.
+            Suspendisse sodales leo vel fringilla consequat. Maecenas eget vestibulum orci. Nulla tristique nulla quis
+            massa molestie, in congue purus maximus.
+          </p>
+          <a href="shop-women.html" class="cta">Discover our products</a>
         </div>
-      </nav>
-    </header>
-    <main>
-      <div class="about__background"></div>
-      <div class="about__section">
-        <h1>About us</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-          mattis dui quis leo scelerisque sodales. Aliquam dapibus, tortor eu
-          auctor consectetur, eros lectus interdum justo, vitae sollicitudin
-          ipsum augue eu mi. Proin maximus, nulla non fringilla vulputate, justo
-          massa ullamcorper tellus, in ullamcorper lacus massa sed enim. Integer
-          risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
-        </p>
-        <p>
-          Nulla convallis, ipsum vel vestibulum dapibus, nunc magna auctor
-          sapien, eu commodo risus nibh vitae magna. Suspendisse sodales leo vel
-          fringilla consequat. Maecenas eget vestibulum orci. Nulla tristique
-          nulla quis massa molestie, in congue purus maximus.
-        </p>
-        <a href="shop-women.html" class="cta">Discover our products</a>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer>
       <div class="footer__content">
         <a href="contact-us.html">Help</a>
