--- a/checkout-success.html
+++ b/checkout-success.html
@@ -9,41 +9,31 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/success.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <a href="index.html"
-        ><img
-          src="images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <a href="contact-us.html" id="checkout-help">Help with payment</a>
-    </header>
-    <main>
-      <div class="success__main">
-        <i class="far fa-check-circle fa-7x icon-success"></i>
-        <h1>Your order has been successfully confirmed</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-          mattis dui quis leo scelerisque sodales. Aliquam dapibus, tortor eu
-          auctor consectetur, eros lectus interdum justo, vitae sollicitudin
-          ipsum augue eu mi. Proin maximus, nulla non fringilla vulputate, justo
-          massa ullamcorper tellus, in ullamcorper lacus massa sed enim. Integer
-          risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
-        </p>
-        <div class="checkout-cta">
-          <a href="shop-men.html" class="cta-dark-green check-btn"
-            >Back to shopping</a
-          >
-          <a href="index.html" class="cta-dark-green check-btn">Close</a>
+    <div class="wrapper">
+      <header>
+        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+        <a href="contact-us.html" id="checkout-help">Help with payment</a>
+      </header>
+      <main>
+        <div class="success__main">
+          <i class="far fa-check-circle fa-7x icon-success"></i>
+          <h1>Your order has been successfully confirmed</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis leo scelerisque sodales.
+            Aliquam dapibus, tortor eu auctor consectetur, eros lectus interdum justo, vitae sollicitudin ipsum augue eu
+            mi. Proin maximus, nulla non fringilla vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa
+            sed enim. Integer risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
+          </p>
+          <div class="checkout-cta">
+            <a href="shop-men.html" class="cta-dark-green check-btn">Back to shopping</a>
+            <a href="index.html" class="cta-dark-green check-btn">Close</a>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer>
       <div class="footer__content">
         <a href="contact-us.html">Help</a>
