--- a/index.html
+++ b/index.html
@@ -8,99 +8,82 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <a href="index.html"
-        ><img
-          src="images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <label for="hamburger-menu"
-        ><i class="fas fa-bars" id="hamburger-icon"></i
-      ></label>
-      <input type="checkbox" id="hamburger-menu" />
-      <nav>
-        <ul>
-          <li><a href="shop-men.html">Men</a></li>
-          <li><a href="shop-women.html">Women</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-        <div class="icon-wrapper">
-          <a href="login.html"><i class="far fa-user icon"></i></a>
-          <a href="shopping-bag.html"
-            ><i class="fas fa-shopping-cart icon"></i
-          ></a>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="welcome"></div>
-      <section>
-        <div class="welcome__content">
-          <h1>Pushing the Comfort Zone</h1>
-          <div class="welcome-line"></div>
-          <p>
-            Comfortable high quality rain jackets suitable to all outdoor
-            activities.
-          </p>
-          <a href="shop-men.html" class="cta welcome-btn">Shop</a>
-        </div>
-      </section>
-      <section class="service">
-        <div class="service__info">
-          <h2>Free shipping</h2>
-          <p>Free shipping to all destinations in Europe</p>
-        </div>
-        <div class="service__info">
-          <h2>Support customer</h2>
-          <p>Customer service is available at all time in our website</p>
-        </div>
-        <div class="service__info">
-          <h2>Secure payments</h2>
-          <p>
-            Several payments available. Choose the one you are the most
-            comfortable with.
-          </p>
-        </div>
-      </section>
-      <section class="explore">
-        <h2>Explore our products</h2>
-        <div class="explore__men explore-size">
-          <a href="shop-men.html" class="cta shop">Shop Men</a>
-        </div>
-        <div class="explore__women explore-size">
-          <a href="shop-women.html" class="cta shop">Shop Women</a>
-        </div>
-      </section>
-      <section class="review">
-        <img
-          src="images/review-img.jpg"
-          alt="smiling and walking woman with yellow rain jacket"
-          class="review__image"
-        />
-        <div class="review__customer">
-          <h2>Customer Review</h2>
-          <p>
-            «Loving this beautiful rain jacket I recently got from RainyDays! It
-            is perfect for any outdoor activity and it has kept me dry and
-            comfortable. An extra bonus that the delivery was fast, I got my
-            package within a few days!»
-          </p>
-          <p>- Susan Johnson</p>
-        </div>
-      </section>
-      <section class="popular-section">
-        <h2>Popular Products</h2>
-        <div class="popular-products"></div>
-      </section>
-    </main>
+    <div class="wrapper">
+      <header>
+        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+        <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <ul>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+          </ul>
+          <div class="icon-wrapper">
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="welcome"></div>
+        <section>
+          <div class="welcome__content">
+            <h1>Pushing the Comfort Zone</h1>
+            <div class="welcome-line"></div>
+            <p>Comfortable high quality rain jackets suitable to all outdoor activities.</p>
+            <a href="shop-men.html" class="cta welcome-btn">Shop</a>
+          </div>
+        </section>
+        <section class="service">
+          <div class="service__info">
+            <h2>Free shipping</h2>
+            <p>Free shipping to all destinations in Europe</p>
+          </div>
+          <div class="service__info">
+            <h2>Support customer</h2>
+            <p>Customer service is available at all time in our website</p>
+          </div>
+          <div class="service__info">
+            <h2>Secure payments</h2>
+            <p>Several payments available. Choose the one you are the most comfortable with.</p>
+          </div>
+        </section>
+        <section class="explore">
+          <h2>Explore our products</h2>
+          <div class="explore__men explore-size">
+            <a href="shop-men.html" class="cta shop">Shop Men</a>
+          </div>
+          <div class="explore__women explore-size">
+            <a href="shop-women.html" class="cta shop">Shop Women</a>
+          </div>
+        </section>
+        <section class="review">
+          <img
+            src="images/review-img.jpg"
+            alt="smiling and walking woman with yellow rain jacket"
+            class="review__image"
+          />
+          <div class="review__customer">
+            <h2>Customer Review</h2>
+            <p>
+              «Loving this beautiful rain jacket I recently got from RainyDays! It is perfect for any outdoor activity
+              and it has kept me dry and comfortable. An extra bonus that the delivery was fast, I got my package within
+              a few days!»
+            </p>
+            <p>- Susan Johnson</p>
+          </div>
+        </section>
+        <section class="popular-section">
+          <h2>Popular Products</h2>
+          <div class="popular-products"></div>
+        </section>
+      </main>
+    </div>
     <footer>
       <div class="footer__content">
         <a href="contact-us.html">Help</a>
