--- a/products/product.html
+++ b/products/product.html
@@ -12,48 +12,50 @@
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
-      <input type="checkbox" id="hamburger-menu" />
-      <nav>
-        <ul>
-          <li><a href="../shop-men.html">Men</a></li>
-          <li><a href="../shop-women.html">Women</a></li>
-          <li><a href="../about-us.html">About Us</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
-        </ul>
-        <div class="icon-wrapper">
-          <a href="../login.html"><i class="far fa-user icon"></i></a>
-          <a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="seasonal-autumn__main">
-        <div class="product__links">
-          <p class="breadcrumb"></p>
-        </div>
-        <div class="main-wrapper">
-          <section class="product__img">
-            <div class="product__img2"></div>
-          </section>
-          <section class="seasonal-autumn">
-            <div>
-              <div class="product-specification"></div>
-              <select name="size" id="productSize" class="dropdown">
-                <option value="size">Size</option>
-              </select>
-              <div class="productSize__style">Please choose a size</div>
-              <div class="product__cta">
-                <div class="cart-btn"></div>
+    <div class="wrapper">
+      <header>
+        <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+        <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <ul>
+            <li><a href="../shop-men.html">Men</a></li>
+            <li><a href="../shop-women.html">Women</a></li>
+            <li><a href="../about-us.html">About Us</a></li>
+            <li><a href="../contact-us.html">Contact Us</a></li>
+          </ul>
+          <div class="icon-wrapper">
+            <a href="../login.html"><i class="far fa-user icon"></i></a>
+            <a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="seasonal-autumn__main">
+          <div class="product__links">
+            <p class="breadcrumb"></p>
+          </div>
+          <div class="main-wrapper">
+            <section class="product__img">
+              <div class="product__img2"></div>
+            </section>
+            <section class="seasonal-autumn">
+              <div>
+                <div class="product-specification"></div>
+                <select name="size" id="productSize" class="dropdown">
+                  <option value="size">Size</option>
+                </select>
+                <div class="productSize__style">Please choose a size</div>
+                <div class="product__cta">
+                  <div class="cart-btn"></div>
+                </div>
               </div>
-            </div>
-          </section>
+            </section>
+          </div>
         </div>
-      </div>
-      <section class="cart-wrapper"></section>
-    </main>
+        <section class="cart-wrapper"></section>
+      </main>
+    </div>
     <footer>
       <div class="footer__content">
         <a href="../contact-us.html">Help</a>
