--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -12,32 +12,35 @@
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
-      <input type="checkbox" id="hamburger-menu" />
-      <nav>
-        <ul>
-          <li><a href="shop-men.html">Men</a></li>
-          <li><a href="shop-women.html">Women</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-        <div class="icon-wrapper">
-          <a href="login.html"><i class="far fa-user icon"></i></a>
-          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+    <div class="wrapper">
+      <header>
+        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+        <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav>
+          <ul>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+          </ul>
+          <div class="icon-wrapper">
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="shopping-bag__main">
+          <h1>Your shopping bag</h1>
+          <h2>Products</h2>
+          <div class="total-products"></div>
+          <div class="product__wrapper"></div>
+          <section class="summmary__section"></section>
         </div>
-      </nav>
-    </header>
-    <main>
-      <div class="shopping-bag__main">
-        <h1>Your shopping bag</h1>
-        <h2>Products</h2>
-        <div class="total-products"></div>
-        <div class="product__wrapper"></div>
-        <section class="summmary__section"></section>
-      </div>
-    </main>
+      </main>
+    </div>
+
     <footer>
       <div class="footer__content">
         <a href="contact-us.html">Help</a>
